<resources>
    <string name="app_name">Github App</string>
    <string name="search_hint">Enter a Github\'s username</string>
    <string name="user_not_found">User not found </string>
    <string name="no_favorite">Please Add People to Favorites First</string>
    <string name="search_guide">Click search icon to search username</string>
    <string name="content_description">User Avatar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="repository">%d\n repository</string>
    <string name="gist">%d\n gist</string>
    <string name="following">%d\n following</string>
    <string name="follower">%d\n follower</string>
    <string name="location_placeholder">Location</string>
    <string name="website_placeholder">Website</string>
    <string name="company_placeholder">Company Name</string>
    <string name="name_placeholder">Nama</string>
    <string name="username_placeholder">Username</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>

    <string-array name="tab_title">
        <item>@string/followers_title</item>
        <item>@string/following_title</item>
    </string-array>
</resources>