<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.UserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_favorite_outline"
            tools:ignore="ContentDescription,KeyboardInaccessibleWidget,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/detailsIvAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/details_tv_name"
            style="@style/TextContent.Secondary"
            app:layout_constraintEnd_toEndOf="@+id/detailsIvAvatar"
            app:layout_constraintStart_toStartOf="@+id/detailsIvAvatar"
            app:layout_constraintTop_toBottomOf="@+id/detailsIvAvatar"
            tools:text="@string/name_placeholder" />

        <TextView
            android:id="@+id/details_tv_username"
            style="@style/TextContent.SubtitleDetails"
            android:layout_width="175dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/details_tv_name"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/details_tv_name"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_name"
            tools:ignore="TextSizeCheck"
            tools:text="@string/username_placeholder" />

        <TextView
            android:id="@+id/details_tv_follower"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/details_tv_username"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_username"
            tools:text="@string/follower" />

        <TextView
            android:id="@+id/details_tv_following"
            style="@style/TextContent.Details"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/details_tv_username"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_username"
            tools:text="@string/following" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/secondary"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_tv_following"
            app:tabTextColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>